Salesforce/main/default/objects/GDMException__c/GDMException__c.object-meta.xml
<CustomObject>
    <label>GDMException</label>
    <nameField>
        <displayFormat>EXC-{0}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDMExceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>