Salesforce/main/default/objects/GDMException__c/fields/StackTrace_Long__c.field-meta.xml
<CustomField>
    <fullName>StackTrace_Long__c</fullName>
    <label>StackTrace Long</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>